# Job-portal

./: README.md
Job_Portal/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  loki-config.yml  main.py  pg_hba.conf  prometheus.yml  promtail-config.yml  pyproject.toml  requirements.txt
Job_Portal/alembic/: env.py
Job_Portal/alembic/versions/: 026e7b168a76_add_user_status_and_steps.py  28d2151a6a52_add_candidate_enums.py  33b4d64c93f8_add_password_reset_to_otp_purpose.py  354267ae157b_initial_schema_with_appropriate_types.py  3af309fa4798_add_budget_type_enum.py  6c54856eb989_make_user_id_nullable_in_otp.py  7d22163290f4_add_jobs_and_candidates.py  a0a5ed0120ab_add_location_type_enum.py  c79252644d25_add_subscriptions_documents_and_otp_.py  ca033550e355_add_engagement_type_enum.py  d307fd889da7_remove_full_time_from_engagement_type_.py  d90feacc1ae1_add_availability_enum.py  ed162651c0ed_initial.py
Job_Portal/app/: config.py  database.py  main.py
Job_Portal/app/core/: dependencies.py  exceptions.py  otp.py  security.py
Job_Portal/app/middleware/: cors.py  logging_middleware.py
Job_Portal/app/models/: __init__.py  ai_score.py  base.py  candidate.py  candidate_experience.py  client_profile.py  document.py  enums.py  job.py  otp_verification.py  password_reset_token.py  refresh_token.py  subscription.py  user.py  vendor_profile.py
Job_Portal/app/repositories/: user_repository.py
Job_Portal/app/routers/: auth.py
Job_Portal/app/schemas/: __init__.py  auth.py  user.py
Job_Portal/app/services/: auth_service.py  email_service.py  otp_service.py
(+5 files in other folders)
