[project]
name = "job-portal"
version = "0.1.0"
description = "Job Portal with Client-Vendor model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.31",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "redis>=5.0.6",
    "celery>=5.4.0",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.9",
    "email-validator>=2.2.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.12",
]

[project.scripts]
job-portal = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
